# machine_viewer

./: Badelow2  CMakeLists.txt  README.html  cube.c  cubic.c  glutobj.c  replace.cpp
cmake/: FindGLFW.cmake
demo/: demo00.333  demo00.444  demo01.333  demo01.444  demo02.333  demo03.333
include/: cube.hpp  viewer.hpp
src/: cube.cpp  main.cpp  viewer.cpp
